--- a/products/templates/base.html
+++ b/products/templates/base.html
@@ -25,14 +25,14 @@
       <div class="collapse navbar-collapse " id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="user/">Home<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/products">products</a>
+            <a class="nav-link" href="products/">products</a>
           </li>
           
           <li class="nav-item">
-            <a class="nav-link disabled" href="/signup">Sign</a>
+            <a class="nav-link disabled" href="signup/">Sign</a>
           </li>
         </ul>
       </div>
